--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,11 @@ body {
   animation: marquee 30s linear infinite;
 }
 
-
+div.relative {
+  position: relative;
+  bottom: 50px;
+  border: 3px solid #73AD21;
+}
 .column {
   float: left;
   width: 50%;
