--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
 }
 
 .title > h1 {
-  color: #fff;
+  color: #ffc512;
   font-size: 5rem;
   text-transform: uppercase;
   letter-spacing: 1px;
